# zed

./: Cargo.toml
crates/gpui/src/platform/mac/: dispatcher.rs
crates/novel_ai_panel/: Cargo.toml
crates/novel_ai_panel/src/: novel_ai_panel.rs
crates/novel_chapter/: Cargo.toml
crates/novel_chapter/src/: novel_chapter.rs
crates/novel_chapters_panel/: Cargo.toml
crates/novel_chapters_panel/src/: novel_chapters_panel.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
