[package]
name = "novel_ai_panel"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/novel_ai_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
editor.workspace = true
gpui.workspace = true
language_model.workspace = true
menu.workspace = true
novel_chapter.workspace = true
panel.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true
futures.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
