[package]
name = "novel_chapter"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/novel_chapter.rs"
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
fs.workspace = true
gpui.workspace = true
util.workspace = true
collections.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
